Fixed delete logic on ads, user cars and reviews. Also fixed temp data displaying correct information with Sweet Alert.

--- a/Xcelerate/Areas/Admin/Views/Home/Index.cshtml
+++ b/Xcelerate/Areas/Admin/Views/Home/Index.cshtml
@@ -27,6 +27,7 @@
 		<h1 class="news-section-text">NEWS</h1>
 
 		<form asp-area="Admin" asp-controller="AdminNews" asp-action="AddGeneratedNews" method="post">
+			@Html.AntiForgeryToken()
 			<button type="submit" class="generate-button">GENERATE NEWS</button>
 		</form>
 
