--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -107,7 +107,7 @@ body {
     left: 309px;
 }
 
-.delete-button {
+.delete-button-user {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
