--- a/Xcelerate/Views/Ad/Create.cshtml
+++ b/Xcelerate/Views/Ad/Create.cshtml
@@ -18,6 +18,7 @@
 
 <article class="card-ad-create">
 	<form method="post" action="/Ad/Create" class="card-content" enctype="multipart/form-data">
+		@Html.AntiForgeryToken()
 		<h1 class="title-text">CREATE AD</h1>
 		<section class="information-inputs">
 			<div class="form-input">
