--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -316,71 +316,21 @@
 	</div>
 }
 
-
-@if (TempData.ContainsKey("CompareError") && (bool)TempData["CompareError"])
+@if (TempData.ContainsKey("CompareError"))
 {
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script>
-		Swal.fire({
-			icon: 'error',
-			title: 'Compare error!',
-			text: 'Can\'t compare the same car!',
-			showConfirmButton: true,
-			background: 'linear-gradient(180deg, rgb(41, 40, 40), rgba(255, 255, 255, 0.8))'
-		});
-	</script>
-	@TempData.Remove("CompareError")
-}
-@if (TempData["DeleteMessage"] != null && (bool)TempData["DeleteMessage"])
-{
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
-	<script>
-		Swal.fire({
-			icon: 'success',
-			title: 'Ad deleted!',
-			text: 'You have succesfully deleted an ad!',
-		});
-	</script>
-	@TempData.Remove("DeleteMessage")
-	;
-}
-
-@if (TempData["ConfirmDelete"] != null && (bool)TempData["ConfirmDelete"])
-{
-	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-	<script>
-		Swal.fire({
-			title: 'Confirm Delete',
-			text: 'Are you sure you want to delete this car ad?',
-			icon: 'warning',
-			showCancelButton: true,
-			confirmButtonColor: '#d33',
-			cancelButtonColor: '#3085d6',
-			confirmButtonText: 'Yes, delete it!'
-		}).then((result) => {
-			if (result.isConfirmed) {
-
-				var form = document.createElement('form');
-				form.method = 'post';
-				form.action = '/Ad/DeleteConfirmed';
-
-				var input = document.createElement('input');
-				input.type = 'hidden';
-				input.name = 'carId';
-				input.value = '@TempData["CarIdToDelete"]';
-
-				form.appendChild(input);
-
-				// Append the form to the document body and submit it
-				document.body.appendChild(form);
-				form.submit();
-
-		@TempData.Remove("ConfirmDelete")
-		@TempData.Remove("CarIdToDelete")
-							}
-		});
-	</script>
+    <script>
+        Swal.fire({
+            icon: 'error',
+            title: 'Compare error!',
+            text: '@TempData["CompareError"]',
+            showConfirmButton: true,
+        });
+    </script>
+    {
+        TempData.Remove("CompareError");
+    }
 }
 
 
