--- a/Xcelerate/Views/UserCars/Sell.cshtml
+++ b/Xcelerate/Views/UserCars/Sell.cshtml
@@ -4,10 +4,8 @@
 <link rel="stylesheet" href="~/css/Ad/Create.css" asp-append-version="true" />
 
 <svg xmlns="http://www.w3.org/2000/svg">
-	<!-- filterUnits is required to prevent clipping the blur outside the viewBox -->
 
 	<filter id="motion-blur-filter" filterUnits="userSpaceOnUse">
-		<!-- We only want horizontal blurring. x: 100, y: 0 -->
 
 		<feGaussianBlur stdDeviation="100 0"></feGaussianBlur>
 	</filter>
@@ -17,6 +15,7 @@
 
 <article class="card-ad-create">
 	<form method="post" action="/Ad/Edit" class="card-content" enctype="multipart/form-data">
+		@Html.AntiForgeryToken()
 		<h1 class="title-text">EDIT AD</h1>
 		<section class="information-inputs">
 			<div class="form-input">
