--- a/Xcelerate/wwwroot/css/Admin/Home/Index.css
+++ b/Xcelerate/wwwroot/css/Admin/Home/Index.css
@@ -11,7 +11,6 @@ body {
     background-repeat: no-repeat;
     margin: 0px;
     padding: 0px;
-    background-color: rebeccapurple;
 }
 
 .website-name {
@@ -22,11 +21,11 @@ body {
     font-size: 60px;
     margin-top: 0px;
     margin-bottom: 0px;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently supported by Chrome, Opera and Firefox */
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
 }
 
 #clock {
