--- a/Xcelerate/Views/Account/Login.cshtml
+++ b/Xcelerate/Views/Account/Login.cshtml
@@ -28,8 +28,8 @@
 		</section>
 
 		<section class="check-box-input">
-			<input type="checkbox" name="" id="check-box" />
-			<label for="check-box">I&nbsp&nbspaccept the Terms of Use & Privacy Policy</label>
+@* 			<input type="checkbox" name="" id="check-box" />
+			<label for="check-box">I&nbsp&nbspaccept the Terms of Use & Privacy Policy</label> *@
 		</section>
 
 		<section class="button-object">
