--- a/Xcelerate/Views/Ad/Information.cshtml
+++ b/Xcelerate/Views/Ad/Information.cshtml
@@ -154,7 +154,7 @@
 	<script>
 		Swal.fire({
 			icon: 'success',
-			title: 'Ad deleted!',
+			title: 'Review deleted!',
 			text: '@TempData["DeleteMessage"]',
 		});
 	</script>
