--- a/Xcelerate/wwwroot/css/Ad/Index.css
+++ b/Xcelerate/wwwroot/css/Ad/Index.css
@@ -82,7 +82,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: darkred;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
     border-radius: 25px;
     text-decoration: none;
     position: absolute;
@@ -94,7 +94,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: darkred;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
     border-radius: 25px;
     text-decoration: none;
     position: absolute;
@@ -419,6 +419,7 @@ select:focus {
     margin-top: 88px;
     position: relative;
     right: 415%;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
 }
 
 .second-form-inputs {
