--- a/Xcelerate/wwwroot/css/Admin/Home/Index.css
+++ b/Xcelerate/wwwroot/css/Admin/Home/Index.css
@@ -134,7 +134,7 @@ svg {
     height: 30px;
 }
 
-.delete-icon-link {
+.delete-icon-link-admin {
     background: none;
     border: none;
     padding: 0;
