--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -426,6 +426,7 @@ select:focus {
     margin-top: 88px;
     position: relative;
     right: 415%;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
 }
 
 .second-form-inputs {
