Updated buttons for user cars.

--- a/Xcelerate/wwwroot/css/UserCars/Index.css
+++ b/Xcelerate/wwwroot/css/UserCars/Index.css
@@ -88,7 +88,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: seagreen;
+    background: linear-gradient(180deg, seagreen, rgba(255, 255, 255, 0.2));
     border-radius: 15px;
     text-decoration: none;
     position: absolute;
@@ -100,7 +100,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: darkred;
+    background: linear-gradient(180deg, red, rgba(255, 255, 255, 0.2));
     border-radius: 15px;
     text-decoration: none;
     position: absolute;
@@ -111,7 +111,7 @@ body {
     color: white;
     font-size: 22px;
     padding: 12px 38px;
-    background-color: darkred;
+    background: linear-gradient(180deg, darkred, rgba(255, 255, 255, 0.2));
     border-radius: 15px;
     text-decoration: none;
     position: absolute;
