Fixed minor issues with car deletion and filtering

--- a/Xcelerate/Areas/Admin/Views/Home/Index.cshtml
+++ b/Xcelerate/Areas/Admin/Views/Home/Index.cshtml
@@ -209,7 +209,7 @@
 
 	<script>
 		Swal.fire({
-			icon: 'success',
+			icon: 'error',
 			title: 'Oops something happened!',
 			text: '@TempData["ErrorMessage"]',
 		});
