--- a/Xcelerate/Views/Ad/Index.cshtml
+++ b/Xcelerate/Views/Ad/Index.cshtml
@@ -256,8 +256,7 @@
                                 currentPage = page,
 								compareClicked = TempData["CompareButtonClicked"],
 							    firstCarId = ViewBag.FirstCarId,
-								year = Model.Year,
-								euroStandard = Model.EuroStandard,
+								EuroStandard = Model.EuroStandard,
 								fuelType = Model.FuelType,
 								colour = Model.Colour,
 								transmission = Model.Transmission,
@@ -288,8 +287,7 @@
                                 currentPage = Model.Pager.CurrentPage + 1,
 								compareClicked = TempData["CompareButtonClicked"],
 								firstCarId = ViewBag.FirstCarId,
-								year = Model.Year,
-								euroStandard = Model.EuroStandard,
+								EuroStandard = Model.EuroStandard,
 								fuelType = Model.FuelType,
 								colour = Model.Colour,
 								transmission = Model.Transmission,
@@ -303,8 +301,8 @@
 								minHorsePower = Model.MinHorsePower,
 								maxHorsePower = Model.MaxHorsePower,
 								brand = Model.Brand,
+								model = Model.Model,
 								manufacturer = Model.Manufacturer,
-                                model = Model.Model,
                                 minMileage = Model.MinMileage,
                                 maxMileage = Model.MaxMileage,
                                 sorting = Model.Sorting
