--- a/Xcelerate/Views/_ViewImports.cshtml
+++ b/Xcelerate/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Xcelerate
 @using Xcelerate.Models
+@using Griesoft.AspNetCore.ReCaptcha
+@addTagHelper *, Griesoft.AspNetCore.ReCaptcha
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 @using Xcelerate.Core.Models.Account;
